--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ highlighter: pygments
 
 paginate: 20
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
+domain_name: 'http://madundead.rocks'
+google_analytics: 'UA-67091605-1'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
 
 # Details for the RSS feed generator
-url:            'http://your-blog-url.example.com'
+url:            'http://madundead.rocks'
 author:         'Konstantin Bukley'
 authorTwitter:  'madundead'
 
